# d-ll-m

./: .gitignore  Cargo.toml  README.md  flake.nix
.claude/: CLAUDE.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client-desktop/: Cargo.toml
crates/client-desktop/src/: main.rs
crates/client/src/: ability_score_type.rs  ability_type.rs  class_type.rs  creature_size_type.rs  creature_type_type.rs  dnd_5_e_action_type.rs  dnd_5_e_background_table.rs  dnd_5_e_background_type.rs  dnd_5_e_class_feature_table.rs  dnd_5_e_class_table.rs  dnd_5_e_feat_table.rs  dnd_5_e_feat_type.rs  dnd_5_e_language_type.rs  dnd_5_e_monster_table.rs  dnd_5_e_optional_feature_type.rs  dnd_5_e_race_type.rs  dnd_5_e_sense_table.rs  dnd_5_e_sense_type.rs  dnd_5_e_subclass_feature_table.rs  dnd_5_e_subclass_feature_type.rs  dnd_5_e_subclass_table.rs  dnd_5_e_subclass_type.rs  feat_category_type.rs  item_type_type.rs  language_grant_type.rs  language_type.rs  lib.rs  message_type.rs  mod.rs  optional_feature_prereq_type.rs  optional_feature_type_type.rs  race_type.rs  seed_dnd_5_e_action_reducer.rs  seed_dnd_5_e_background_reducer.rs  seed_dnd_5_e_class_reducer.rs  seed_dnd_5_e_condition_reducer.rs  seed_dnd_5_e_feat_reducer.rs  seed_dnd_5_e_item_reducer.rs  seed_dnd_5_e_language_reducer.rs  seed_dnd_5_e_monster_reducer.rs  (+13 more)
crates/client/tests/: identity_store.rs
crates/core/: Cargo.toml
crates/core/src/: dnd5e.rs
crates/core/tests/: dnd5e_keys.rs
crates/data-import/: Cargo.toml
crates/data-import/src/: lib.rs  system.rs
crates/data-import/src/dnd5e/: entry.rs  mod.rs  normalize.rs  report.rs  reporting.rs  seed.rs  types.rs  validate.rs  write.rs
crates/data-import/src/dnd5e/seed/: classes.rs  items.rs  monsters.rs  other.rs  references.rs  spells.rs  support.rs
crates/data-import/src/dnd5e/types/: backgrounds.rs  classes.rs  conditions.rs  feats.rs  grants.rs  items.rs  monsters.rs  optional_features.rs  races.rs  reference.rs  spells.rs
crates/data-import/tests/: dnd5e_cleanup_reporting.rs  dnd5e_seed_uniqueness.rs  dnd5e_validation.rs
crates/dllm/: Cargo.toml
crates/dllm/src/: dnd5e.rs
crates/server/: Cargo.toml
crates/server/src/: connection.rs  lib.rs  reducers.rs  tables.rs
crates/server/src/dnd5e/: convert.rs  query.rs
crates/spacetime/: Cargo.toml
crates/spacetime-bindings/: Cargo.toml
crates/spacetime-bindings/src/: ability_bonus_type.rs  ability_choice_type.rs  ability_grant_type.rs  alignment_type.rs  caster_progression_type.rs  class_level_prereq_type.rs  creature_size_type.rs  dnd_5_e_action_table.rs  dnd_5_e_action_type.rs  dnd_5_e_background_table.rs  dnd_5_e_background_type.rs  dnd_5_e_char_creation_option_table.rs  dnd_5_e_char_creation_option_type.rs  dnd_5_e_class_feature_table.rs  dnd_5_e_class_feature_type.rs  dnd_5_e_class_table.rs  dnd_5_e_class_type.rs  dnd_5_e_condition_table.rs  dnd_5_e_condition_type.rs  dnd_5_e_cult_boon_table.rs  dnd_5_e_cult_boon_type.rs  dnd_5_e_deck_table.rs  dnd_5_e_deck_type.rs  dnd_5_e_deity_table.rs  dnd_5_e_deity_type.rs  dnd_5_e_feat_table.rs  dnd_5_e_feat_type.rs  dnd_5_e_item_table.rs  dnd_5_e_item_type.rs  dnd_5_e_language_table.rs  dnd_5_e_language_type.rs  dnd_5_e_monster_table.rs  dnd_5_e_monster_type.rs  dnd_5_e_object_table.rs  dnd_5_e_object_type.rs  dnd_5_e_optional_feature_table.rs  dnd_5_e_optional_feature_type.rs  dnd_5_e_psionic_table.rs  dnd_5_e_psionic_type.rs  (+53 more)
crates/tools/: Cargo.toml
crates/tools/src/: convert.rs  dnd5e.rs  lib.rs  main.rs
crates/tools/src/dnd5e/: mod.rs  query.rs
crates/tools/tests/: dnd5e_query_filters.rs
design/: architecture.md  campaigns.md  data.md  game-systems.md  llm-dm.md  tools.md
(+4 files in other folders)
