[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dllm = { path = "crates/dllm" }
dllm-core = { path = "crates/core" }
dllm-client = { path = "crates/client" }
dllm-server = { path = "crates/server" }
dllm-bindings = { path = "crates/spacetime-bindings" }
dllm-tools = { path = "crates/tools" }
data-import = { path = "crates/data-import" }

# spacetime
spacetimedb = "2.1.0"
spacetimedb-sdk = "2.1.0"

clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dioxus = { version = "0.7.5", features = ["desktop"] }
tokio = { version = "1.52.1", features = ["time"] }

# logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-tracy = "0.11.4"
