[package]
name = "data-import"
version.workspace = true
edition.workspace = true

[lib]
name = "data_import"
path = "src/lib.rs"

[dependencies]
dllm-core.workspace = true
dllm-bindings.workspace = true
dllm-server.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
spacetimedb-sdk.workspace = true
