[package]
name = "dllm-server"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# internal
dllm-core.workspace = true

# external
spacetimedb.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dllm-bindings.workspace = true
spacetimedb-sdk.workspace = true
