[package]
name = "dllm-tools"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dllm-tools"
path = "src/main.rs"

[dependencies]
dllm-client.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
spacetimedb-sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
